--- a/server/package.json
+++ b/server/package.json
@@ -12,14 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@1inch/multicall": "^1.0.7",
     "axios": "^0.27.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
+    "ethers": "^5.7.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
     "morgan": "^1.10.0",
+    "tslib": "^2.4.0",
     "validator": "^13.7.0",
     "web3": "^1.7.5"
   }
