--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "NODE_ENV=dev nodemon server.js",
-    "start:prod": "NODE_ENV=prod node server.js"
+    "start:prod": "NODE_ENV=prod node server.js",
+    "token:rate": "node utils/tokeRate.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "dotenv": "^16.0.2",
     "ethers": "^5.7.0",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
     "morgan": "^1.10.0",
