--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-virtual": "^3.0.0-beta.18",
     "axios": "^0.27.2",
     "ethers": "^5.7.0",
+    "global": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
