--- a/client/package.json
+++ b/client/package.json
@@ -9,16 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^0.5.1",
+    "@rainbow-me/rainbowkit": "^0.5.3",
     "@reduxjs/toolkit": "^1.8.5",
     "@tanstack/react-query": "^4.2.3",
     "@tanstack/react-virtual": "^3.0.0-beta.18",
     "axios": "^0.27.2",
+    "buffer": "^6.0.3",
     "ethers": "^5.7.0",
-    "global": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
+    "react-loading-skeleton": "^3.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.4.0",
