--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "NODE_ENV=dev nodemon server.js",
+    "start:dev": "cross-env NODE_ENV=dev nodemon server.js",
     "start:prod": "NODE_ENV=prod node server.js",
     "token:rate": "node utils/tokeRate.js"
   },
@@ -17,6 +17,7 @@
     "axios": "^0.27.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.2",
     "ethers": "^5.7.0",
     "express": "^4.18.1",
