--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^0.5.3",
     "@reduxjs/toolkit": "^1.8.5",
-    "@tanstack/react-query": "^4.2.3",
+    "@tanstack/react-query": "^4.3.9",
+    "@tanstack/react-query-devtools": "^4.3.9",
     "@tanstack/react-virtual": "^3.0.0-beta.18",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
