--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
     "morgan": "^1.10.0",
+    "socket.io": "^4.5.2",
     "tslib": "^2.4.0",
     "validator": "^13.7.0",
     "web3": "^1.7.5"
