--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.3.0",
     "react-select": "^5.4.0",
     "react-toastify": "^9.0.8",
+    "socket.io-client": "^4.5.2",
     "use-onclickoutside": "^0.4.1",
     "wagmi": "^0.6.6"
   },
