--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "buffer": "^6.0.3",
     "ethers": "^5.7.0",
     "js-cookie": "^3.0.1",
+    "keccak256": "^1.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
