--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.11",
     "@rainbow-me/rainbowkit": "^0.5.3",
     "@reduxjs/toolkit": "^1.8.5",
     "@tanstack/react-query": "^4.3.9",
