--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "client": "npm run dev",
+    "server": "npm run start:dev",
+    "start": "concurrently \"npm:client\" \"cd ..\" \"cd server\"",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
@@ -17,6 +20,7 @@
     "@tanstack/react-virtual": "^3.0.0-beta.18",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
+    "concurrently": "^7.4.0",
     "ethers": "^5.7.0",
     "js-cookie": "^3.0.1",
     "keccak256": "^1.0.6",
