--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-toastify": "^9.0.8",
     "socket.io-client": "^4.5.2",
     "use-onclickoutside": "^0.4.1",
+    "uuid": "^9.0.0",
     "wagmi": "^0.6.6"
   },
   "devDependencies": {
