--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "@types/js-cookie": "^3.0.2",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
