--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "js-cookie": "^3.0.1",
     "keccak256": "^1.0.6",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-hook-form": "^7.34.2",
