--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "concurrently": "^7.4.0",
     "ethers": "^5.7.0",
     "js-cookie": "^3.0.1",
+    "js-sha256": "^0.9.0",
     "keccak256": "^1.0.6",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
