--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,20 +5,21 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
   pull_request:
-    branches: [ "main" ]
+    branches: ['main']
 
 jobs:
   build:
     runs-on: self-hosted
-    
+
     steps:
-    - uses: actions/checkout@v3
-    - run: |
-        cd server
-        npm i
-        npm run start:prod
-        cd ../client
-        npm i
-        npm run dev
+      - uses: actions/checkout@v3
+      - run: |
+          cd server
+          npm i
+          npm run start:prod
+      - run: |
+          cd client
+          npm i
+          npm run dev
