--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,6 +19,7 @@ jobs:
           cd server
           npm i
           pm2 stop 1
+          pm2 save
           pm2 start 1
           pm2 save
           sudo service nginx restart
@@ -27,6 +28,7 @@ jobs:
           chmod 777 node_modules
           npm i
           pm2 stop 0
+          pm2 save
           pm2 start 0
           pm2 save
           sudo service nginx restart
