--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,17 +18,11 @@ jobs:
       - run: |
           cd server
           npm i
-          pm2 stop 1
-          pm2 save
-          pm2 start 1
-          pm2 save
+          pm2 restart server
           sudo service nginx restart
       - run: |
           cd client
           chmod 777 node_modules
           npm i
-          pm2 stop 0
-          pm2 save
-          pm2 start 0
-          pm2 save
+          pm2 restart client
           sudo service nginx restart
