--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@vitejs/plugin-legacy": "^2.3.1",
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.8",
     "eslint": "^8.26.0",
