--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,15 +14,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: |
+          cd client
+          npm i --force
+          npm run build
+          cd ..
+      - run: |
           cd server
           npm i
           cd ..
           pm2 status
           pm2 restart server
-          sudo service nginx restart
-      - run: |
-          cd client
-          npm i
-          cd ..
-          pm2 restart client
-          sudo service nginx restart
+          sudo systemctl reload nginx
