--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,9 +14,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - run: cd client
-      - run: npm ci
-      - run: npm run build --if-present
+      - run: |
+          cd client
+          npm ci
+          npm run build --if-present
   deploy:
     runs-on: self-hosted
     steps:
