--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,15 +9,6 @@ on:
   pull_request:
     branches: ['main']
 jobs:
-  build:
-    runs-on: self-hosted
-
-    steps:
-      - uses: actions/checkout@v3
-      - run: |
-          cd client
-          npm ci
-          npm run build --if-present
   deploy:
     runs-on: self-hosted
     steps:
@@ -25,12 +16,10 @@ jobs:
       - run: |
           cd client
           npm i --force
-          npm run build
+          pm2 restart client
           cd ..
       - run: |
           cd server
           npm i
-          cd ..
-          pm2 status
           pm2 restart server
           sudo service nginx restart
